pixel perfect almost 100%

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		<p class="hdr-paragraph">
 			I'm glad that you visited my site where he can get to know me and my work.
 		</p>
-		<a class="button" href="#" type="button"></a>
+		<a class="button" href="#my-name" type="button"><span class="button-arrow"></span></a>
 	</header>
 	<main>
 		<section>
-			<p class="main-paragraph">
+			<p class="main-paragraph" id="my-name">
 				My name is Vlad Musienko, I'm a web designer. I love to draw and all that is connected with the design. In this area a long time ago and during this time I managed to create several successful projects used by people all over the world. 
 			</p>
 			<p class="main-paragraph">
@@ -26,12 +26,18 @@
 			</p>
 			<h2 class="main-title">what i do</h2>
 			<dl class="main-defenition">
-				<dd>TEMPLATE.</dd>
-					<dt>Lately, I often create templates for WordPress. The portfolio is the presentation and the opportunity to buy them on the site Themeforest.</dt>
-				<dd>BRAND.</dd>
-					<dt>Creating a brand is a very complex process aimed at the creation and positioning the unique persons of the company, its products and services.</dt>
-				<dd>DREAMS.</dd>
-					<dt>Everyone is able to destroy the dream, but not everyone is able to create it. I try to help people in its definition as a person and specialist.</dt>
+				<div>
+					<dd>TEMPLATE.</dd>
+						<dt>Lately, I often create templates for WordPress. The portfolio is the presentation and the opportunity to buy them on the site Themeforest.</dt>
+				</div>
+				<div>
+					<dd>BRAND.</dd>
+						<dt>Creating a brand is a very complex process aimed at the creation and positioning the unique persons of the company, its products and services.</dt>
+				</div>
+				<div>
+					<dd>DREAMS.</dd>
+						<dt>Everyone is able to destroy the dream, but not everyone is able to create it. I try to help people in its definition as a person and specialist.</dt>
+				</div>
 			</dl>
 		</section>
 	</main>
