--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 			</p>
 			<h2 class="main-title">what i do</h2>
 			<dl class="main-defenition">
-				<div>
-					<dd>TEMPLATE.</dd>
-						<dt>Lately, I often create templates for WordPress. The portfolio is the presentation and the opportunity to buy them on the site Themeforest.</dt>
+				<div class="defenition">
+					<dd class="dd-title">TEMPLATE.</dd>
+						<dt class="dt-content">Lately, I often create templates for WordPress. The portfolio is the presentation and the opportunity to buy them on the site Themeforest.</dt>
 				</div>
-				<div>
-					<dd>BRAND.</dd>
-						<dt>Creating a brand is a very complex process aimed at the creation and positioning the unique persons of the company, its products and services.</dt>
+				<div class="defenition">
+					<dd class="dd-title">BRAND.</dd>
+						<dt class="dt-content">Creating a brand is a very complex process aimed at the creation and positioning the unique persons of the company, its products and services.</dt>
 				</div>
-				<div>
-					<dd>DREAMS.</dd>
-						<dt>Everyone is able to destroy the dream, but not everyone is able to create it. I try to help people in its definition as a person and specialist.</dt>
+				<div class="defenition">
+					<dd class="dd-title">DREAMS.</dd>
+						<dt class="dt-content">Everyone is able to destroy the dream, but not everyone is able to create it. I try to help people in its definition as a person and specialist.</dt>
 				</div>
 			</dl>
 		</section>
